RESOLVED FIXED62962
Correct logic for putting errors on the correct line when handling JSONP
https://bugs.webkit.org/show_bug.cgi?id=62962
Summary Correct logic for putting errors on the correct line when handling JSONP
Oliver Hunt
Reported 2011-06-19 20:30:22 PDT
Correct logic for putting errors on the correct line when handling JSONP
Attachments
Patch (3.68 KB, patch)
2011-06-19 20:31 PDT, Oliver Hunt
sam: review+
Oliver Hunt
Comment 1 2011-06-19 20:31:20 PDT
Oliver Hunt
Comment 2 2011-06-19 20:51:11 PDT
Note You need to log in before you can comment on or make changes to this bug.