2011-06-19  Oliver Hunt  <oliver@apple.com>

Reviewed by Sam Weinig.

        Correct logic for putting errors on the correct line when handling JSONP
        https://bugs.webkit.org/show_bug.cgi?id=62962

        Add test case this time

        * fast/js/parser-syntax-check-expected.txt:
        * fast/js/script-tests/parser-syntax-check.js:
2011-06-19  Oliver Hunt  <oliver@apple.com>

        Reviewed by Sam Weinig.

        Correct logic for putting errors on the correct line when handling JSONP
        https://bugs.webkit.org/show_bug.cgi?id=62962

        Minor fix for the minor fix.  *sigh*

        * interpreter/Interpreter.cpp:
        (JSC::Interpreter::execute):

Canonical link: https://commits.webkit.org/78557@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89228 268f45cc-cd09-0410-ab3c-d52691b4dbfc